# mcp-logic

./: .gitignore  CLEANUP_SUMMARY.md  Dockerfile  ENHANCEMENTS.md  README.md  build-debug.sh  claude-app-config.json  cleanup.sh  docker-setup.ps1  docker-setup.sh  linux-setup-script.sh  mcp_logic_agent.md  pyproject.toml  reactive_agent_architecture_integration_concept.md  run-mcp-logic-local.sh  run-mcp-logic.bat  run-mcp-logic.sh  run_mcp_logic.bat  run_mcp_logic.sh  windows-setup-mcp-logic.bat
.handoff_docs/: codebaseDetails.md  errorHandling.md  handoff_notes.md  integrationGuides.md  techStack.md  workflowDetails.md
Documents/: KnowledgeToApplication.md
src/mcp_logic/: __main__.py  categorical_helpers.py  mace4_wrapper.py  server.py  syntax_validator.py
tests/: debug_mace4.py  test_debug.py  test_enhancements.py  test_proofs.py
