[project]
name = "mcp_logic"
version = "0.1.0"
description = "MCP server for logical reasoning using Prover9"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0"
]

[project.scripts]
mcp_logic = "mcp_logic.server:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_logic"]

[tool.pytest.ini_options]
testpaths = ["tests"]